--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </header>
 
 
-    <main class="container ">
+    <main class="container main-m ">
 
 
         <!-- * Casual Section Starts Here ===================================-->
@@ -371,7 +371,7 @@
 
             <div class="row ">
                 <div class=" col-sm-12 col-md-12 col-lg-5 " style=" height:200px;">
-                    <div class="d-flex align-items-center shadow-lg rounded-4 p-3 gap-3 my-3 p-4">
+                    <div class="d-flex align-items-center shadow-lg rounded-4  gap-3 my-3 p-4">
                         <div>
                             <img src=" icons/image 12.png" style="width: 100px; height: 80px; " class="img-fluid ">
                         </div>
@@ -416,14 +416,77 @@
         <!-- * Benefit Section Ends Here ==================================-->
 
 
-
-
-
-
-
     </main>
 
 
+
+    <!-- * Footer Part starts here ==========================================-->
+
+    <footer class="bg-dark py-5">
+        <div class="container ">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 g-5">
+                    <div>
+                        <img src="images/nike logo.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-6 g-5">
+                    <form class="row g-3 text-white">
+                        <div class="col-md-6">
+                            <label for="inputEmail4" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="inputEmail4">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputPassword4" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="inputPassword4">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress2" class="form-label">Address 2</label>
+                            <input type="text" class="form-control" id="inputAddress2"
+                                placeholder="Apartment, studio, or floor">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputCity" class="form-label">City</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
+                        <div class="col-md-4">
+                            <label for="inputState" class="form-label">State</label>
+                            <select id="inputState" class="form-select">
+                                <option selected>Choose...</option>
+                                <option>...</option>
+                            </select>
+                        </div>
+                        <div class="col-md-2">
+                            <label for="inputZip" class="form-label">Zip</label>
+                            <input type="text" class="form-control" id="inputZip">
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck">
+                                <label class="form-check-label" for="gridCheck">
+                                    Check me out
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-12 ">
+                            <button type="submit" class="btn btn-primary" data-bs-toggle="tooltip"
+                                data-bs-placement="top"
+                                data-bs-title="Hurry and Sign Up to get you desired product">Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <h4 class="text-white text-center mt-5 pt-5">©All rights reserved to Nike</h1>
+    </footer>
+
+
+
+    <!-- * Footer Part ends here ==========================================-->
 
 
 
@@ -458,6 +521,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+
+    </script>
 </body>
 
 </html>
