overlaping of footer removed

--- a/index.html
+++ b/index.html
@@ -367,10 +367,10 @@
 
         <!-- * Benefit Section Starts Here ==================================-->
 
-        <section class="my-5">
+        <section class="my-5 benifit">
 
             <div class="row ">
-                <div class=" col-sm-12 col-md-12 col-lg-5 " style=" height:200px;">
+                <div class=" col-sm-12 col-md-12 col-lg-5 ">
                     <div class="d-flex align-items-center shadow-lg rounded-4  gap-3 my-3 p-4">
                         <div>
                             <img src=" icons/image 12.png" style="width: 100px; height: 80px; " class="img-fluid ">
@@ -416,13 +416,15 @@
         <!-- * Benefit Section Ends Here ==================================-->
 
 
+
+
     </main>
 
 
 
     <!-- * Footer Part starts here ==========================================-->
 
-    <footer class="bg-dark py-5">
+    <footer class="bg-dark py-5 container-fluid">
         <div class="container ">
             <div class="row">
                 <div class="col-lg-6 col-md-12 g-5">
@@ -483,7 +485,6 @@
         </div>
         <h4 class="text-white text-center mt-5 pt-5">©All rights reserved to Nike</h1>
     </footer>
-
 
 
     <!-- * Footer Part ends here ==========================================-->
