new states name added in option (footer)

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                         <img src="images/nike logo.jpg" class="img-fluid">
                     </div>
                 </div>
-                <div class="col-6 g-5">
+                <div class="col-12 col-lg-6 g-5">
                     <form class="row g-3 text-white">
                         <div class="col-md-6">
                             <label for="inputEmail4" class="form-label">Email</label>
@@ -459,7 +459,11 @@
                             <label for="inputState" class="form-label">State</label>
                             <select id="inputState" class="form-select">
                                 <option selected>Choose...</option>
-                                <option>...</option>
+                                <option>.Florida.</option>
+                                <option>.Massachusetts.</option>
+                                <option>.Idaho.</option>
+                                <option>.Wisconsin.</option>
+                                <option>.Virginia.</option>
                             </select>
                         </div>
                         <div class="col-md-2">
