one button deleted from modal

--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
                                 <option>.Idaho.</option>
                                 <option>.Wisconsin.</option>
                                 <option>.Virginia.</option>
+                                <option>.New Hampshire.</option>
                             </select>
                         </div>
                         <div class="col-md-2">
@@ -513,7 +514,6 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
